@@ -1,0 +1,8 @@
+backend.a
+main.a
+-lbg-path
+-lbg-iobuf
+-lbg-net
+-lbg-unix
+-lbg-str
+socket.lib
