@@ -113,3 +113,7 @@ The
 .B twoftpd-anon
 program functions identically to this program, with the exception of
 having no file modification capabilities.
+The
+.B twoftpd-drop
+program is a similarly restricted program, that can only create new
+files (no overwriting, modifying, or listing existing files).
